--- a/Todo/Todo/Views/TodoItemPage.xaml
+++ b/Todo/Todo/Views/TodoItemPage.xaml
@@ -6,7 +6,7 @@
 		<Label Text="Notes" />
 		<Entry AutomationId="NotesField" Text="{Binding Notes}" />
 		<Label Text="Done" />
-		<Switch IsToggled="{Binding Done}" />
+		<Switch AutomationId="DoneToggle" IsToggled="{Binding Done}" />
 		<Button AutomationId="SaveButton" Text="Save" Clicked="OnSaveClicked" />
 		<Button AutomationId="DeleteButton"  Text="Delete" Clicked="OnDeleteClicked" />
 		<Button AutomationId="CancelButton"  Text="Cancel" Clicked="OnCancelClicked" />
