--- a/Todo/Todo/Views/TodoListPage.xaml
+++ b/Todo/Todo/Views/TodoListPage.xaml
@@ -15,7 +15,7 @@
 				<ViewCell>
 					<StackLayout Margin="20,0,0,0" Orientation="Horizontal" HorizontalOptions="FillAndExpand">
 						<Label AutomationId="TodoItemName" Text="{Binding Name}" VerticalTextAlignment="Center" HorizontalOptions="StartAndExpand" />
-						<Image Source="check.png" HorizontalOptions="End" IsVisible="{Binding Done}" />
+						<Image AutomationId="TaskDone" Source="check.png" HorizontalOptions="End" IsVisible="{Binding Done}" />
 					</StackLayout>
 				</ViewCell>
 			</DataTemplate>
